Exception instead of assertion
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>